[gd_scene load_steps=25 format=2]

[ext_resource path="res://game/resources/theme/fonts/types/description_dynamic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/resources/theme/fonts/types/question_dynamic_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/resources/theme/styles/green_normal_style.tres" type="StyleBox" id=3]
[ext_resource path="res://game/resources/theme/styles/green_pressed_style.tres" type="StyleBox" id=4]
[ext_resource path="res://game/resources/theme/fonts/types/game_name_dynamic_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://game/scripts/controllers/settings_controller.gd" type="Script" id=6]
[ext_resource path="res://game/scripts/ui/interfaces/interface_switch.gd" type="Script" id=8]
[ext_resource path="res://game/scripts/controllers/survey_controller.gd" type="Script" id=9]
[ext_resource path="res://game/scripts/controllers/result_controller.gd" type="Script" id=10]
[ext_resource path="res://game/scripts/ui/interfaces/interface.gd" type="Script" id=11]
[ext_resource path="res://game/resources/theme/default_theme.tres" type="Theme" id=12]
[ext_resource path="res://game/scripts/ui/restart_button.gd" type="Script" id=13]
[ext_resource path="res://game/images/ui/info.tres" type="Texture" id=14]
[ext_resource path="res://game/scripts/controllers/menu_controller.gd" type="Script" id=15]
[ext_resource path="res://game/images/ui/play.tres" type="Texture" id=16]
[ext_resource path="res://game/images/ui/settings.tres" type="Texture" id=17]
[ext_resource path="res://game/images/ui/menu.tres" type="Texture" id=18]
[ext_resource path="res://game/images/ui/restart.tres" type="Texture" id=19]
[ext_resource path="res://game/images/ui/back.tres" type="Texture" id=20]
[ext_resource path="res://game/images/ui/exit.tres" type="Texture" id=21]
[ext_resource path="res://game/resources/theme/styles/red_normal_style.tres" type="StyleBox" id=22]
[ext_resource path="res://game/resources/theme/styles/red_pressed_style.tres" type="StyleBox" id=23]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InterfaceSwitch:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InterfaceSwitch:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "play"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("InterfaceSwitch:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InterfaceSwitch:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("InterfaceSwitch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_set_visible"
} ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 12 )

[node name="InterfaceSwitch" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
script = ExtResource( 8 )
open_interface = "Menu"

[node name="Menu" type="Control" parent="InterfaceSwitch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="MenuController" type="Node" parent="InterfaceSwitch/Menu"]
script = ExtResource( 15 )

[node name="Panel" type="Control" parent="InterfaceSwitch/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GameNameLabel" type="Label" parent="InterfaceSwitch/Menu/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -160.0
custom_fonts/font = ExtResource( 5 )
text = "GAME_NAME"
align = 1
valign = 1

[node name="MainMenu" type="Control" parent="InterfaceSwitch/Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 192.0
mouse_filter = 2

[node name="PlayPanel" type="Panel" parent="InterfaceSwitch/Menu/Panel/MainMenu"]
margin_right = 176.0
margin_bottom = 128.0
mouse_filter = 2

[node name="PlayButton" type="Button" parent="InterfaceSwitch/Menu/Panel/MainMenu/PlayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Menu/Panel/MainMenu/PlayPanel/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 16 )
expand = true
stretch_mode = 1

[node name="DecorativePanel" type="Panel" parent="InterfaceSwitch/Menu/Panel/MainMenu/PlayPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = 16.0
margin_bottom = 32.0
mouse_filter = 2

[node name="SettingsButton" type="Button" parent="InterfaceSwitch/Menu/Panel/MainMenu"]
margin_left = 192.0
margin_right = 320.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Menu/Panel/MainMenu/SettingsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 17 )
expand = true
stretch_mode = 1

[node name="InfoButton" type="Button" parent="InterfaceSwitch/Menu/Panel/MainMenu"]
margin_left = 192.0
margin_top = 96.0
margin_right = 272.0
margin_bottom = 176.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Menu/Panel/MainMenu/InfoButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="QuitButton" type="Button" parent="InterfaceSwitch/Menu/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -112.0
margin_right = -32.0
margin_bottom = -32.0
focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Menu/Panel/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 21 )
expand = true
stretch_mode = 1

[node name="Survey" type="Control" parent="InterfaceSwitch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="SurveyController" type="Node" parent="InterfaceSwitch/Survey"]
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="InterfaceSwitch/Survey/SurveyController"]

[node name="Panel" type="Control" parent="InterfaceSwitch/Survey"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="InterfaceSwitch/Survey/Panel"]
anchor_right = 1.0
margin_bottom = 56.0
mouse_filter = 2

[node name="MenuButton" type="Button" parent="InterfaceSwitch/Survey/Panel"]
margin_left = 32.0
margin_top = 88.0
margin_right = 152.0
margin_bottom = 168.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Survey/Panel/MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 18 )
expand = true
stretch_mode = 1

[node name="QuestionLabel" type="Label" parent="InterfaceSwitch/Survey/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = 88.0
margin_right = -168.0
margin_bottom = -304.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="RestartButton" type="Button" parent="InterfaceSwitch/Survey/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 88.0
margin_right = -32.0
margin_bottom = 168.0
focus_mode = 0
enabled_focus_mode = 0
script = ExtResource( 13 )

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Survey/Panel/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 23.9999
rect_pivot_offset = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 19 )
expand = true
stretch_mode = 1

[node name="Tween" type="Tween" parent="InterfaceSwitch/Survey/Panel/RestartButton"]

[node name="AnswersPanel" type="Control" parent="InterfaceSwitch/Survey/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -288.0
margin_right = 384.0
margin_bottom = -32.0
mouse_filter = 2

[node name="MoreLikelyYesButton" type="Button" parent="InterfaceSwitch/Survey/Panel/AnswersPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = 32.0
margin_right = -8.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "MORE_LIKELY_YES"

[node name="DoNotKnowPanel" type="Panel" parent="InterfaceSwitch/Survey/Panel/AnswersPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -128.0
margin_right = 144.0
margin_bottom = 16.0
mouse_filter = 2

[node name="DecorativePanel1" type="Panel" parent="InterfaceSwitch/Survey/Panel/AnswersPanel/DoNotKnowPanel"]
margin_left = -128.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 32.0
mouse_filter = 2

[node name="CounterLabel" type="Label" parent="InterfaceSwitch/Survey/Panel/AnswersPanel/DoNotKnowPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -88.0
text = "0/0"
align = 1
valign = 1

[node name="DecorativePanel2" type="Panel" parent="InterfaceSwitch/Survey/Panel/AnswersPanel/DoNotKnowPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 32.0
mouse_filter = 2

[node name="DoNotKnowButton" type="Button" parent="InterfaceSwitch/Survey/Panel/AnswersPanel/DoNotKnowPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -80.0
margin_right = -16.0
margin_bottom = -16.0
focus_mode = 0
enabled_focus_mode = 0
text = "DO_NOT_KNOW"

[node name="MoreLikelyNoButton" type="Button" parent="InterfaceSwitch/Survey/Panel/AnswersPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 32.0
margin_right = 384.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 23 )
custom_styles/normal = ExtResource( 22 )
enabled_focus_mode = 0
text = "MORE_LIKELY_NO"

[node name="YesButton" type="Button" parent="InterfaceSwitch/Survey/Panel/AnswersPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -80.0
margin_right = -160.0
margin_bottom = 16.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "YES"

[node name="NoButton" type="Button" parent="InterfaceSwitch/Survey/Panel/AnswersPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -80.0
margin_right = 384.0
margin_bottom = 16.0
focus_mode = 0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 23 )
custom_styles/normal = ExtResource( 22 )
enabled_focus_mode = 0
text = "NO"

[node name="Settings" type="Control" parent="InterfaceSwitch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="SettingsController" type="Node" parent="InterfaceSwitch/Settings"]
script = ExtResource( 6 )

[node name="Panel" type="Control" parent="InterfaceSwitch/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackButton" type="Button" parent="InterfaceSwitch/Settings/Panel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 112.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Settings/Panel/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 20 )
expand = true
stretch_mode = 1

[node name="Wrapper" type="Control" parent="InterfaceSwitch/Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0
mouse_filter = 2

[node name="SettingsPanel" type="Control" parent="InterfaceSwitch/Settings/Panel/Wrapper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -108.0
margin_right = 224.0
margin_bottom = 108.0
mouse_filter = 2

[node name="LanguagePanel" type="Panel" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -108.0
margin_right = 224.0
margin_bottom = -12.0
mouse_filter = 2

[node name="Label" type="Label" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/LanguagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -192.0
margin_bottom = -16.0
text = "LANGUAGE"
valign = 1

[node name="OptionButton" type="OptionButton" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/LanguagePanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "EN"
items = [ "EN", null, false, 0, null, "RU", null, false, 1, null, "TR", null, false, 2, null ]
selected = 0

[node name="ScalePanel" type="Panel" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = 12.0
margin_right = 224.0
margin_bottom = 108.0
mouse_filter = 2

[node name="Label" type="Label" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/ScalePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -288.0
margin_bottom = -16.0
text = "SCALE"
valign = 1

[node name="OptionButton" type="OptionButton" parent="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/ScalePanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "TABLET"
items = [ "MOBILE", null, false, 0, null, "TABLET", null, false, 1, null, "PC", null, false, 2, null ]
selected = 1

[node name="Info" type="Control" parent="InterfaceSwitch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Control" parent="InterfaceSwitch/Info"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackButton" type="Button" parent="InterfaceSwitch/Info/Panel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 112.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Info/Panel/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 20 )
expand = true
stretch_mode = 1

[node name="Wrapper" type="Control" parent="InterfaceSwitch/Info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0
mouse_filter = 2

[node name="InfoPanel" type="Panel" parent="InterfaceSwitch/Info/Panel/Wrapper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.0
margin_top = -208.0
margin_right = 392.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="InterfaceSwitch/Info/Panel/Wrapper/InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "INFO"
valign = 1
autowrap = true

[node name="Result" type="Control" parent="InterfaceSwitch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="ResultController" type="Node" parent="InterfaceSwitch/Result"]
unique_name_in_owner = true
script = ExtResource( 10 )

[node name="Panel" type="Control" parent="InterfaceSwitch/Result"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MenuButton" type="Button" parent="InterfaceSwitch/Result/Panel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 112.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="InterfaceSwitch/Result/Panel/MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 18 )
expand = true
stretch_mode = 1

[node name="CharacterImage" type="TextureRect" parent="InterfaceSwitch/Result/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -264.0
margin_right = 128.0
margin_bottom = -8.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="NameLabel" type="Label" parent="InterfaceSwitch/Result/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 8.0
margin_right = -64.0
margin_bottom = 56.0
align = 1
valign = 1

[node name="DescriptionLabel" type="Label" parent="InterfaceSwitch/Result/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 72.0
margin_right = -64.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 1 )
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/play = SubResource( 2 )

[connection signal="pressed" from="InterfaceSwitch/Menu/Panel/MainMenu/PlayPanel/PlayButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Survey" ]]
[connection signal="pressed" from="InterfaceSwitch/Menu/Panel/MainMenu/SettingsButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Settings" ]]
[connection signal="pressed" from="InterfaceSwitch/Menu/Panel/MainMenu/InfoButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Info" ]]
[connection signal="pressed" from="InterfaceSwitch/Menu/Panel/QuitButton" to="InterfaceSwitch/Menu/MenuController" method="quit"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/MenuButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Back" ]]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/RestartButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_restart"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/RestartButton" to="InterfaceSwitch/Survey/Panel/RestartButton" method="_on_pressed"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/AnswersPanel/MoreLikelyYesButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_more_likely_yes"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/AnswersPanel/DoNotKnowPanel/DoNotKnowButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_do_not_know"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/AnswersPanel/MoreLikelyNoButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_more_likely_no"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/AnswersPanel/YesButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_yes"]
[connection signal="pressed" from="InterfaceSwitch/Survey/Panel/AnswersPanel/NoButton" to="InterfaceSwitch/Survey/SurveyController" method="_on_no"]
[connection signal="pressed" from="InterfaceSwitch/Settings/Panel/BackButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Back" ]]
[connection signal="item_selected" from="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/LanguagePanel/OptionButton" to="InterfaceSwitch/Settings/SettingsController" method="_on_language_selected"]
[connection signal="item_selected" from="InterfaceSwitch/Settings/Panel/Wrapper/SettingsPanel/ScalePanel/OptionButton" to="InterfaceSwitch/Settings/SettingsController" method="_on_scale_selected"]
[connection signal="pressed" from="InterfaceSwitch/Info/Panel/BackButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Back" ]]
[connection signal="pressed" from="InterfaceSwitch/Result/Panel/MenuButton" to="InterfaceSwitch" method="set_visible_interface" binds= [ "Menu" ]]
